#250684 Fix partially visible tooltip on offered meal participants counter

--- a/src/Resources/sass/pages/_guest-view.scss
+++ b/src/Resources/sass/pages/_guest-view.scss
@@ -57,7 +57,11 @@
   }
 
   .meal-row {
-    overflow: auto;
+    @include clearfix();
+
+    .text-variation {
+      float: left;
+    }
   }
 }
 
