--- a/src/Resources/sass/pages/_meal-list.scss
+++ b/src/Resources/sass/pages/_meal-list.scss
@@ -36,7 +36,7 @@
 
   .meal {
     .meal-row {
-      overflow: auto;
+      @include clearfix();
     }
 
     .week-day {
